# lambda-applications

./: .gitignore  CHANGELOG.md  Challenges.hs  Charles.cabal  Lambda.cabal  Main.hs  README.md  Tests.hs
lib/: Parsing.hs  Types.hs
src/LambdaCalculus/: LambdaAdv.hs  LambdaCalc.hs  MacroList.hs
src/WordSearch/: WordSearch.hs
tests/: Main.hs  Tests.hs
