cabal-version:       >=1.10
name:                lambda-applications
synopsis:            Lambda Applications
version:             0.1.0.0
author:              Abhaas Goyal
maintainer:          goyalabhaas@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:   Types,
                     LambdaCalc,
                     LambdaAdv,
                     WordSearch,
                     Parsing
  build-depends:     base >=4.14 && <4.15,
                     random >= 1.2.0
  hs-source-dirs:    lib,
                     src/LambdaCalculus,
                     src/WordSearch
--  ghc-options:         -Wall -Wno-partial-type-signatures
  default-language:  Haskell2010
executable Lambda
  main-is:           Main.hs
  hs-source-dirs:    lib,
                     src
  build-depends:     base,
                     lambda-applications
  ghc-options:       -threaded
                     -- Wall
  default-language:  Haskell2010

test-suite Lambda-Tests
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    tests
  build-depends:     base,
                     lambda-applications
  ghc-options:       -threaded
                     --Wall
  default-language:  Haskell2010